--- a/web/style.css
+++ b/web/style.css
@@ -173,6 +173,7 @@ nav {
 }
 
 .driverbot-info {
+    font-size: 0.9rem;
     color: var(--alt-text-color);
 }
 
@@ -206,6 +207,7 @@ nav {
 .logo {
     animation: logo-animation 5s infinite;
     user-select: none;
+    margin-top: 0.125em;
 }
 
 h1 {
@@ -339,6 +341,7 @@ input:focus {
     display: none;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 8em;
 }
 
 .info-list {
@@ -348,6 +351,137 @@ input:focus {
     row-gap: 0.25em;
     color: var(--alt-text-color);
 }
+
+.info-password-row {
+    display: flex;
+    column-gap: 1em;
+}
+
+.password-icon {
+    width: 20px;
+}
+
+/*      Drive Section      */
+
+.drive-section {
+    display: none;
+    flex-direction: column;
+    padding-inline: 4em;
+    row-gap: 5em;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.wasd-wrapper {
+    position: relative;
+}
+
+.wasd-flex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 0.3em;
+    user-select: none;
+}
+
+.w-button, .a-button, .s-button, .d-button {
+    width: 5em;
+    height: 3em;
+    border: none;
+    background-color: var(--main-text-color);
+    color: var(--bg-color);
+    font-family: 'Helvetica Neue';
+    font-weight: 700;
+    outline: none;
+    cursor: pointer;
+    user-select: none;
+    transition: background-color 50ms ease-out;
+}
+
+.wasd-tooltips {
+    position: absolute;
+    right: -2em;
+    top: -2em;
+    height: 24px;
+}
+
+.tooltips-overlay {
+    opacity: 0;
+    position: absolute;
+    top: 1.5em;
+    right: -7.5em;
+    background-color: var(--main-text-color);
+    color: var(--bg-color);
+    padding: 2em;
+    transition: opacity 250ms ease-out;
+    pointer-events: none;
+}
+
+.tooltips-icon {
+    width: 24px;
+    opacity: 25%;
+    user-select: none;
+    transition: all 250ms ease-out;
+}
+
+.tooltips-icon:hover {
+    opacity: 100%;
+}
+
+.wasd-tooltips:hover + .tooltips-overlay {
+    opacity: 100%;
+    pointer-events: auto;
+}
+
+.speed-wrapper {
+    
+}
+
+.speed-slider-wrapper {
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 2em;
+  }
+  
+  .speed-slider {
+    -webkit-appearance: none;
+    appearance: none;
+    width: calc(100% - 1.9em);
+    height: 10px;
+    padding-block: 0;
+    padding-inline: 0.75em;
+    background-color: #d3d3d3;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    transition: background-color 50ms ease-out;
+  }
+
+  .speed-slider:hover {
+    background-color: #b8b8b8;
+  }
+  
+  .speed-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 40px;
+    background: var(--main-text-color);
+    cursor: pointer;
+  }
+  
+  .speed-slider::-moz-range-thumb {
+    width: 15px;
+    height: 50px;
+    background: var(--main-text-color);
+    cursor: pointer;
+  }
+
+  .speed-number {
+    font-weight: 700;
+  }
 
 /*   Footer   */
 
@@ -438,13 +572,22 @@ input:checked + .slider:before {
 
 .github-mark {
     width: 20px;
+    user-select: none;
     filter: invert(70%) sepia(7%) saturate(0%) hue-rotate(139deg) brightness(88%) contrast(84%);
+}
+
+.hitachi-icon {
+    user-select: none;
 }
 
 /*   Media   */
 
 @media only screen and (max-width: 740px) {
     .logo {
+        display: none;
+    }
+
+    .driverbot-info {
         display: none;
     }
 }
@@ -468,6 +611,10 @@ input:checked + .slider:before {
 
     .github-mark {
         display: none;
+    }
+
+    .tooltips-overlay {
+        right: 0;
     }
 }
 
