--- a/web/style.css
+++ b/web/style.css
@@ -786,10 +786,10 @@ footer {
 /* The switch - the box around the slider */
 .switch {
     position: relative;
-    bottom: 0.125em;
+    bottom: 0.075em;
     display: inline-block;
     width: 46px;
-    height: 22px;
+    height: 21px;
 }
 
 /* Hide default HTML checkbox */
@@ -807,7 +807,7 @@ footer {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: var(--grey);
     -webkit-transition: .4s;
     transition: .4s;
 }
@@ -818,7 +818,7 @@ footer {
     height: 16px;
     width: 16px;
     left: 3px;
-    bottom: 3px;
+    bottom: 2.5px;
     background-color: white;
     -webkit-transition: .4s;
     transition: .4s;
