--- a/web/style.css
+++ b/web/style.css
@@ -187,6 +187,16 @@ img {
     column-gap: 0.75em;
 }
 
+.logo-link {
+    margin-top: 1em;
+    height: 52px;
+    transition: background-color 200ms ease-out;
+}
+
+.logo-link:hover {
+    background-color: var(--main-text-color);
+}
+
 nav {
     display: flex;
     flex-direction: row;
@@ -474,12 +484,12 @@ input:focus {
 .drive-section {
     display: flex;
     flex-direction: row;
-    column-gap: 5em;
+    column-gap: 3em;
     row-gap: 5em;
     flex-wrap: wrap;
     align-items: center;
     margin-bottom: 10em;
-    margin-inline: 6em;
+    margin-inline: 0em;
 }
 
 .wasd-wrapper {
@@ -548,11 +558,13 @@ input:focus {
     pointer-events: auto;
 }
 
-.speed-wrapper {
+/*   Sliders   */
+
+.slider-wrapper {
     margin: auto;
 }
 
-.speed-slider-wrapper {
+.slider-container {
     width: 300px;
     display: flex;
     flex-direction: column;
@@ -560,7 +572,7 @@ input:focus {
     row-gap: 2em;
 }
   
-.speed-slider {
+.control-slider {
     -webkit-appearance: none;
     appearance: none;
     width: calc(100% - 1.9em);
@@ -574,12 +586,12 @@ input:focus {
     transition: background-color 50ms ease-out;
 }
 
-.speed-slider:hover {
+.control-slider:hover {
     background-color: var(--grey);
 }
 
 /* Thumb of the speed slider */
-.speed-slider::-webkit-slider-thumb {
+.control-slider::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
     width: 15px;
@@ -589,7 +601,7 @@ input:focus {
     border-radius: 2px;
 }
   
-.speed-slider::-moz-range-thumb {
+.control-slider::-moz-range-thumb {
     width: 15px;
     height: 50px;
     background: var(--main-text-color);
@@ -597,7 +609,7 @@ input:focus {
     border-radius: 2px;
 }
 
-.speed-number {
+.slider-number {
     font-weight: 700;
 }
 
