--- a/web/style.css
+++ b/web/style.css
@@ -479,6 +479,26 @@ input:focus {
     width: 20px;
 }
 
+/*   Configure controller section   */
+
+.configure-controller-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 8em;
+    padding-inline: 2.5em;
+}
+
+.controller-info {
+    font-size: 0.75rem;
+    color: var(--alt-text-color);
+    margin-bottom: 2em;
+}
+
+.controller-button-wrapper {
+    width: 300px;
+}
+
 /*      Drive Section      */
 
 .drive-section {
